# LingWen

./: .gitignore  CLAUDE.md  DIRECTORY_GUIDE.md  HANDOFF.md  INDEX.md  README.md  pyproject.toml  pytest.ini  run_init.sh  workflow_state.json  灵文心流.txt  电影制作流程优化方案.md
novel-factory/: .env.example  .gitignore  CHANGELOG-v9.0.md  CLAUDE.md  DIRECTORY_GUIDE.md  README.md  codecov.yml  hooks.yaml  lingwen.py  pyproject.toml  run_init.sh  run_verify_engine.py  workflow_state.json  workflow_state.json.backup
novel-factory/.claude/: settings.json
novel-factory/.docs/: README.md  factory-structure.md  game-studio-comparison.md  workflow-architecture.md
novel-factory/.skills/: SKILL.md  架构规划.md
novel-factory/.state/: cross_volume.db  reading_power.db  test.db  test_backend.db  test_final.db  workflow.db
novel-factory/.workflow_rules/: 伏笔追踪表.md  角色状态表.md
novel-factory/02_作家工作室/: run_writer.sh  作家部门工作流程.md
novel-factory/03_内容仓库/: update_index.py
novel-factory/04_审核员工作室/: emotion_checker.py  emotion_review_standards.md  run_review.sh
novel-factory/05_模拟读者池/: comment_classifier.py
novel-factory/06_意见仓库/: run_opinion.sh  意见仓库工作流程.md
novel-factory/07_汇总仓库/: run_summary.sh
novel-factory/10_方法论/: 01_灵感捕捉与筛选.md  02_核心三要素.md  03_世界观与设定.md  05_大纲结构设计.md  06_初稿写作.md  11_方法论落地方案.md  README.md  workflow_state_schema.md  审核方法论对照指南.md  目录索引.md  详细流程文档.md
novel-factory/10_规范文档/: 文档结构标准.md
novel-factory/11_方法论/: README.md
novel-factory/12_方法论/: 目录索引.md
novel-factory/agent_system/: master_controller.py
novel-factory/ai_service/: __init__.py  openai_provider.py  router.py
novel-factory/collaboration/: ACTIVE_TASK.md  BACKLOG.md  CURRENT_STATUS.md  DEPLOYMENT_LOG.md  ENV_CONFIG.md  TEST_LOG.md
novel-factory/config/: api_config.yaml  coverage_modules.yaml  primary_revision.yaml  project.yaml  prose_calibration.yaml  prose_judge_schema.json  skill_registry.yaml
novel-factory/context/: character_profiles.yaml  checker_performance.json  feedback_learning.json
novel-factory/dashboard/: __init__.py  app.py  cascade_notifier.py  cvg_ws.py  e2e_entry.py  errors.py  protocols.py  ws.py
novel-factory/docs/: AI小说工厂优化方案.md  CI_SETUP.md  README.md  S1-S8量化标准.md  advance-walkthrough-checklist.md  anhe-external-release.md  anye-external-release.md  anye-full-read-report.md  chapter-production-runbook.md  character-bible.md  ci-quality-gates.md  companion-walkthrough-checklist.md  context-management.md  creator-changelog.md  creator-onboarding-wizard.md  creator-onboarding.md  creator-product-prd-v1.md  demo-checklist-report.md  eight-books-reading-guide.md  faction-design.md  huangsha-external-release.md  huangsha-full-read-report.md  huiyu-external-release.md  jinghai-external-release.md  lore-registry.md  primary-revision-book.md  prose-calibration-log.md  prose-rubric-v1.md  prose-rubric-v2.md  second-primary-revision-huiyu.md  studio-changelog.md  (+21 more)
(+6733 files in other folders)
