[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lingwen-novel-factory"
version = "9.11.0"
description = "灵文 · 工业化小说生产系统 — LingWen industrial novel production system"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }
authors = [
    { name = "XiaZiHunDun", email = "cuiyangjs@163.com" },
]
keywords = [
    "novel",
    "fiction",
    "writing",
    "ai-agents",
    "quality-assurance",
    "webnovel",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business",
    "Topic :: Text Processing :: Markup",
]

# Runtime deps — 实际 import 出来的第三方包,只列需要的
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "httpx>=0.27",  # minimax_provider 自定义 http client (X-Api-Key)
    "pydantic>=2.5",
    "pydantic-settings>=2.1",
    "openai>=1.30",
    "anthropic>=0.30",
    "PyYAML>=6.0",
    "qdrant-client>=1.7",
]

[project.optional-dependencies]
# 开发/测试依赖 — `pip install -e ".[dev]"`
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "pytest-timeout>=2.3",
    "pytest-metadata>=3.1",
    "pytest-json-report>=1.5",
]

[tool.setuptools]
# 显式列包,避免 setuptools 误把 lingwen.py 当单文件模块
include-package-data = true
zip-safe = false

[tool.setuptools.packages.find]
# 只声明这 3 个包,tests/ 和 lingwen.py 不进 wheel(lingwen.py 留作脚本)
include = ["infra*", "tools*", "dashboard*"]
exclude = ["tests*", "docs*", "plans*", ".claude*", ".skills*"]

[tool.setuptools.package-data]
# dashboard 有静态资源
"dashboard" = ["**/*.html", "**/*.css", "**/*.js", "**/*.json"]

# ---------------------------------------------------------------------------
# Tool configs (pyproject.toml 集中配置,避免散在多个 ini/tox)
# ---------------------------------------------------------------------------
#
# pytest 配置保留在 pytest.ini — 项目历史已用 .ini 格式,改用
# [tool.pytest.ini_options] 会引入双源(两边写不会自动同步)。
# 后续若要集中,可删 pytest.ini 把这段搬过来。

[tool.ruff]
# Ruff: 快,集 black/isort/pyflakes/flake8-bugbear 于一体
# 暂不开过严规则,只做基础 lint
line-length = 110
target-version = "py311"
extend-exclude = [
    "build",
    "dist",
    ".eggs",
    "**/__pycache__",
    ".venv",
    "venv",
]

[tool.ruff.lint]
# 默认 rule set (E/F) + import sort (I) — 暂不开 complexity/security 等
select = ["E", "F", "I", "W"]
ignore = [
    "E501",  # line too long — 项目有大量中文长行,关闭
    "F401",  # imported but unused — tools/ 脚本有 re-export 模式
]

[tool.ruff.lint.per-file-ignores]
# tests 容许未使用 import (fixture 引入但不直接用)
"tests/**" = ["F401", "F811"]
# 集成脚本容许多 import (脚本式工具)
"tools/**" = ["F401"]
